--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,7 @@
     "service_worker": "background.js",
     "type": "module"
   },
-  "permissions": ["storage", "notifications"],
+  "permissions": ["storage", "notifications", "alarms"],
   "host_permissions": ["<all_urls>"],
   "content_scripts": [
     {
